# sc-machine

./: .clang-format  .cmake-format.yaml  .gitignore  .travis.yml  404.html  CMakeLists.txt  Makefile  README.md  codecov.yml  comparsion.txt  index.html  mkdocs.yml  search.html  sitemap.xml
.github/: main.yml
.github/workflows/: coverage.yml  main.yml  sanitizers.yml
_assets/: main.css  main.js
bindings/python/: make.sh  make.sh~  pysc.py  pysc_wrap.c
changelog/: index.html
cmake/: FindGLIB2.cmake  FindGlib2_module.cmake  FindLibClang.cmake  FindRocksDB.cmake  codegen.cmake  tests.cmake
cmake/modules/: FindLibClang.cmake  FindRocksDB.cmake
config/: config.ini.in
cpp/common/: index.html
cpp/cpp-meta/: index.html
cpp/el_types/: index.html
cpp/images/: iterators_scheme.gwf  sc_ResolveRelationTuple.gwf  sc_SetRelationValue.gwf  sc_result_ok_example.gwf
cpp/kpm/: index.html
cpp/templates/: index.html
dev/codestyle/: index.html
dev/git-workflow/: index.html
dev/pr/: index.html
dev/test/: index.html
docs/: changelog.md
docs/cpp/: cpp-meta.md  templates.md
docs/dev/: pr.md
docs/http/: websocket.md
docs/other/: config.md
docs/python/: cpp_wrap.md
http/: index.html
http/websocket/: index.html
images/python/: sc_helper_kbReplaceBinaryRelation_1.gwf  sc_helper_kbReplaceBinaryRelation_2.gwf  sc_helper_kbSetRelationLinkValue.gwf
images/sc-events/: sc-event-content.gwf  sc-event-input-edge.gwf  sc-event-output-edge.gwf
images/scs/: scs_example_level_1.gwf  scs_example_level_1_2.gwf  scs_example_level_2.gwf  scs_example_level_2_2.gwf  scs_example_level_3.gwf  scs_example_level_3_2.gwf  scs_example_level_4.gwf
images/templates/: template_example_2.gwf  template_triple_a_a_f_example.gwf  template_triple_f_a_a_example.gwf  template_triple_f_a_f_example.gwf
license/: index.html
mkdocs/: search_index.json
net/sctp/: index.html
other/config/: index.html
other/images/: scs_keynodes_old_example_1.gwf  scs_keynodes_old_example_2.gwf
other/scs/: index.html
python/cpp_wrap/: index.html
python/python/: index.html
sc-kpm/: CMakeLists.txt
sc-kpm/nl/: nlIvona.cpp
sc-kpm/python/_definitions/sc/: sc.py
sc-kpm/python/_definitions/sc/sc_class/: sc_template.py
sc-kpm/sc-agents-common/: CMakeLists.txt
sc-kpm/sc-agents-common/utils/: AgentUtils.cpp
sc-kpm/sc-common/: CMakeLists.txt
sc-kpm/sc-python/services/http_api/: ws_sc_json.py
sc-kpm/sc-search/: CMakeLists.txt
sc-kpm/sc-search/agents/: search_input_arcs.c
sc-kpm/sc-ui/: CMakeLists.txt  uiCommands.cpp  uiKeynodes.cpp  uiKeynodes.h  uiTranslators.cpp
sc-kpm/sc-ui/translators/: uiSc2uiJsonTranslator.cpp  uiSc2uiJsonTranslator.h  uiTranslatorFromSc.cpp
sc-kpm/sc-utils/: CMakeLists.txt
sc-kpm/scp/: CMakeLists.txt  scp_interpreter.c  scp_interpreter_utils.c  scp_keynodes.c
sc-kpm/scp/scp_lib/scp_system_operators/: sc_system_gen.cpp  sc_system_operators.cpp  sc_system_search.cpp  scp_sys_gen.cpp  scp_sys_search.cpp
sc-kpm/search/: search.c  search_keynodes.c  search_keynodes.h
sc-kpm/search/agents/: search_semantic_neighborhood.c  search_structure.c  search_structure.h
sc-memory/: CMakeLists.txt  Makefile  sc-memory.pro
sc-memory/cpp/: sc_memory.cpp  sc_template.hpp  sc_template_build.cpp  sc_template_gen.cpp
sc-memory/sc-core/: CMakeLists.txt  sc_helper.c  sc_helper.h  sc_memory.c  sc_memory_version.c
sc-memory/sc-core/sc-store/: sc_fm_engine.cpp  sc_storage.c  sc_stream_memory.c
sc-memory/sc-memory/: CMakeLists.txt  sc_addr.cpp  sc_addr.hpp  sc_common_templ.cpp  sc_common_templ.hpp  sc_debug.hpp  sc_keynodes.cpp  sc_link.cpp  sc_link.hpp  sc_memory.cpp  sc_memory.hpp  sc_module.hpp  sc_scs_helper.cpp  sc_scs_helper.hpp  sc_struct.cpp  sc_struct.hpp  sc_template.cpp  sc_template.hpp  sc_template_arg.hpp  sc_template_build.cpp  sc_template_builder.cpp  sc_template_builder.hpp  sc_template_builder_impl.cpp  sc_template_builder_impl.hpp  sc_template_data.hpp  sc_template_gen.cpp  sc_template_generate.cpp  sc_template_generate.hpp  sc_template_named_struct.cpp  sc_template_named_struct.hpp  sc_template_params.cpp  sc_template_params.hpp  sc_template_scs_builder.cpp  sc_template_scs_builder.hpp  sc_template_search.cpp  sc_template_search.hpp  sc_template_struct_builder.cpp  sc_template_struct_builder.hpp  sc_templates.hpp  sc_type.hpp  (+3 more)
sc-memory/sc-memory/http/: sc_http_request.hpp
sc-memory/sc-memory/kpm/: sc_agent.cpp  sc_agent.hpp
sc-memory/sc-memory/python/: sc_python_interp.cpp  sc_python_module.cpp  sc_python_threads.hpp
sc-memory/sc-memory/scs/: scs.g4  scs_parser.cpp  scs_parser.hpp  scs_types.cpp
sc-memory/sc-memory/utils/: sc_console.cpp  sc_keynode_cache.hpp  sc_log.cpp  sc_log.hpp  sc_progress.cpp  sc_signal_handler.cpp
sc-network/: CMakeLists.txt
sc-network/sctp_client/: CMakeLists.txt  sctpClient.cpp  sctpClient.hpp  sctpISocket.hpp  sctpTypes.hpp
sc-network/sctp_client/sockets/: glibSocket.cpp  glibSocket.hpp  winSocket.cpp  winSocket.hpp
sc-network/sctp_client/test/: CMakeLists.txt  test_client.cpp
sc-network/sctp_server/: CMakeLists.txt  main.cpp  sctpClient.cpp  sctpCommand.cpp  sctpEventManager.cpp  sctpServer.cpp  sctpStatistic.cpp
sc-server/: CMakeLists.txt
sc-server/src/: main.cpp
scripts/: format-code.sh  install_deps_ubuntu.sh
search/: search_index.json
tools/: CMakeLists.txt
tools/builder/: CMakeLists.txt
tools/builder/src/: builder.cpp  exception.hpp  gwf_translator.cpp  gwf_translator.hpp  main.cpp  scs_translator.cpp  scs_translator.hpp  translator.cpp  translator.hpp
tools/builder/src/base64/: base64.cpp
tools/builder/tests/: tests.cmake
tools/builder/tests/units/: builder_test.hpp  test_aliases.cpp  test_base.cpp  test_clean.cpp  test_contents.cpp  test_visibility.cpp
tools/codegen/: CMakeLists.txt
tools/codegen/Parser/: Cache.cpp  Cursor.cpp  Main.cpp  MetaDataManager.cpp  MetaUtils.cpp  ReflectionParser.cpp  ReservedTypes.hpp  Types.hpp
tools/codegen/Parser/LanguageTypes/: Class.cpp  Class.hpp  Constructor.cpp  Field.cpp  Field.hpp  Function.cpp  Global.cpp  Invokable.cpp
(+168 files in other folders)
